Add offers and image to structured data in index.html
Extended the JSON-LD structured data with 'offers' and 'image' properties to provide additional metadata for the event, including registration details and a banner image.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@
     "@type": "Organization",
     "name": "St. Joseph's University, Bengaluru",
     "url": "https://www.sju.edu.in/"
-  }
+  },
+  "offers": {
+    "@type": "Offer",
+    "url": "https://icrac-2026.vercel.app/registration",
+    "price": "0",
+    "priceCurrency": "INR",
+    "availability": "https://schema.org/InStock",
+    "validFrom": "2025-12-01"
+  },
+  "image": [
+    "https://icrac-2026.vercel.app/banner.png"
+  ]
 }
 </script>
 
